configure for pdc

--- a/src/Skoruba.IdentityServer4.Admin.Api/appsettings.json
+++ b/src/Skoruba.IdentityServer4.Admin.Api/appsettings.json
@@ -1,10 +1,10 @@
 {
     "ConnectionStrings": {
-        "ConfigurationDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "PersistedGrantDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "IdentityDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "AdminLogDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "AdminAuditLogDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "ConfigurationDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PDC_AUTH;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "PersistedGrantDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PDC_AUTH;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "IdentityDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PDC_AUTH;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "AdminLogDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PDC_AUTH;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "AdminAuditLogDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PDC_AUTH;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "AdminApiConfiguration": {
         "ApiName": "Skoruba IdentityServer4 Admin Api",
@@ -13,7 +13,7 @@
         "IdentityServerBaseUrl": "http://localhost:5000",
         "OidcSwaggerUIClientId": "skoruba_identity_admin_api_swaggerui",
         "OidcApiName": "skoruba_identity_admin_api",
-        "AdministrationRole": "SkorubaIdentityAdminAdministrator",
+        "AdministrationRole": "PdcIdentityAdministrator",
         "RequireHttpsMetadata": false,
         "CorsAllowAnyOrigin": true,
         "CorsAllowOrigins": []
