--- a/src/Skoruba.IdentityServer4.Admin/appsettings.json
+++ b/src/Skoruba.IdentityServer4.Admin/appsettings.json
@@ -1,19 +1,19 @@
 ﻿{
   "ConnectionStrings": {
-    "ConfigurationDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "PersistedGrantDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IdentityDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "AdminLogDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "AdminAuditLogDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConfigurationDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PDC_AUTH;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "PersistedGrantDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PDC_AUTH;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PDC_AUTH;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AdminLogDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PDC_AUTH;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AdminAuditLogDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PDC_AUTH;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "DatabaseProviderConfiguration": {
     "ProviderType": "SqlServer"
   },
   "AdminConfiguration": {
-    "PageTitle": "Skoruba IdentityServer4 Admin",
+    "PageTitle": "PDC IdentityServer4 Admin",
     "FaviconUri": "/favicon.ico",
     "IdentityAdminRedirectUri": "http://localhost:9000/signin-oidc",
-    "IdentityServerBaseUrl": "http://localhost:5000",
+    "IdentityServerBaseUrl": "https://localhost:5001",
     "IdentityAdminCookieName": "IdentityServerAdmin",
     "IdentityAdminCookieExpiresUtcHours": 12,
     "RequireHttpsMetadata": false,
@@ -28,7 +28,7 @@
       "email",
       "roles"
     ],
-    "AdministrationRole": "SkorubaIdentityAdminAdministrator"
+    "AdministrationRole": "PdcIdentityAdministrator"
   },
   "AuditLoggingConfiguration": {
     "Source": "IdentityServer.Admin.Web",
@@ -37,7 +37,7 @@
     "IncludeFormVariables": false
   },
   "CultureConfiguration": {
-    "Cultures": [],
-    "DefaultCulture": null
+    "Cultures": [ "de", "fr", "it", "en" ],
+    "DefaultCulture": "en"
   }
 }
