--- a/src/Skoruba.IdentityServer4.STS.Identity/appsettings.json
+++ b/src/Skoruba.IdentityServer4.STS.Identity/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
     "ConnectionStrings": {
-        "ConfigurationDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "PersistedGrantDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "IdentityDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServer4Admin;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "ConfigurationDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PDC_AUTH;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "PersistedGrantDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PDC_AUTH;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "IdentityDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PDC_AUTH;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "DatabaseProviderConfiguration": {
         "ProviderType": "SqlServer"
@@ -29,7 +29,7 @@
         "ValidationCertificateThumbprint": ""
     },
     "RegisterConfiguration": {
-        "Enabled": true
+        "Enabled": false
     },
     "ExternalProvidersConfiguration": {
         "UseGitHubProvider": false,
@@ -50,14 +50,14 @@
         "ResolutionPolicy": "Username"
     },
     "AdminConfiguration": {
-        "PageTitle": "Skoruba IdentityServer4",
+        "PageTitle": "PDC IdentityServer4",
         "HomePageLogoUri": "/images/skoruba-icon.png",
         "FaviconUri": "/favicon.ico",
         "IdentityAdminBaseUrl": "http://localhost:9000",
-        "AdministrationRole": "SkorubaIdentityAdminAdministrator"
+        "AdministrationRole": "PdcIdentityAdministrator"
     },
   "CultureConfiguration": {
-    "Cultures": [],
-    "DefaultCulture": null
+    "Cultures": ["de","fr","it","en"],
+    "DefaultCulture": "en"
   }
 }
